--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,10 @@
   <include src="./partials/footer.html"></include>
 
   <script src="./js/mobile-menu.js"></script>
+
+  <script src="./js/contacts-modal.js"></script>
+  <script src="./js/contacts-modal-2.js"></script>
+  
   <script src="./index.js"></script>
 </body>
 </html>
