--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     </main>
 
     <include src="./partials/footer.html"></include>
-
+    <include src="./partials/modal.html"></include>
     <!-- <include src="./partials/example.html"></include> -->
     <include src="./partials/example.html"></include>
 
