--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,9 @@
   <include src="./partials/about-modal.html"></include>
 
   <script src="./js/mobile-menu.js"></script>
-  <script src="./js/contacts-modal.js"></script>
-  <script src="./js/contacts-modal-2.js"></script>
   <script src="./js/about-modal.js"></script>
+  <script src="./js/contacts-modals2.js"></script>
+  <script src="./js/contacts-modal-2.js"></script>
   <script src="./index.js"></script>
 </body>
 
