--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="icon" type="image/png" href="./images/logo.png" />
     <!--slider for customer-reviews-------------------------------------->
 
     <!--slider for customer-reviews-------------------------------------->
