--- a/src/index.html
+++ b/src/index.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Заголовок страницы</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Заголовок страницы</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-</head>
+  <body>
+    <include src="./partials/header.html"></include>
+    <main class="main-bg">
+      <include src="./partials/hero.html"></include>
 
-<body>
-  <include src="./partials/header.html"></include>
-  <main class="main-bg">
-    <include src="./partials/hero.html"></include>
+      <include src="./partials/products.html"></include>
 
-    <include src="./partials/products.html"></include>
+      <include src="./partials/about.html"></include>
 
-    <include src="./partials/about.html"></include>
+      <include src="./partials/advantages.html"></include>
+      <include src="./partials/gallery.html"></include>
 
+      <include src="./partials/reviews.html"></include>
 
-    <include src="./partials/advantages.html"></include>
-    <include src="./partials/gallery.html"></include>
+      <include src="./partials/contacts.html"></include>
+    </main>
+    <include src="./partials/footer.html"></include>
+    <include src="./partials/about-modal.html"></include>
 
-    <include src="./partials/reviews.html"></include>
-
-    <include src="./partials/contacts.html"></include>
-
-
-  </main>
-  <include src="./partials/footer.html"></include>
-  <include src="./partials/about-modal.html"></include>
-
-  <script src="./js/mobile-menu.js"></script>
-  <script src="./js/about-modal.js"></script>
-  <script src="./index.js"></script>
-</body>
-
+    <script src="./js/mobile-menu.js"></script>
+    <script src="./js/about-modal.js"></script>
+    <script src="./index.js"></script>
+  </body>
 </html>
