--- a/src/index.html
+++ b/src/index.html
@@ -1,53 +1,54 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Icecream RiseUp</title>
-    <meta
-      name="description"
-      content="Here is the most delicious ice cream in Ukraine."
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="icon" type="image/png" href="./images/logo.png" />
-    <!--slider for customer-reviews-------------------------------------->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Icecream</title>
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
 
-    <!--slider for customer-reviews-------------------------------------->
-  </head>
-  <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/hero_header.html"></include>
-    <include src="./partials/mobile-menu.html"></include>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
+    rel="stylesheet" />
 
-    <main>
-      <include src="./partials/products.html"></include>
-      <include src="./partials/about.html"></include>
-      <include src="./partials/advantages.html"></include>
-      <include src="./partials/gallery.html"></include>
-      <include src="./partials/customer_reviews.html"></include>
-      <include src="./partials/contacts.html"></include>
-    </main>
+  <!--slider for customer-reviews-------------------------------------->
+  <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+  <!--slider for customer-reviews-------------------------------------->
+</head>
 
-    <include src="./partials/footer.html"></include>
-    <include src="./partials/modal.html"></include>
-    <!-- <include src="./partials/example.html"></include> -->
-    <include src="./partials/example.html"></include>
+<body>
+  <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+  <include src="./partials/hero_header.html"></include>
+  <include src="./partials/mobile-menu.html"></include>
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
-    <!-- наши скрипты -->
+  <main>
+    <include src="./partials/products.html"></include>
+    <include src="./partials/about.html"></include>
+    <include src="./partials/advantages.html"></include>
+    <include src="./partials/gallery.html"></include>
+    <include src="./partials/customer_reviews.html"></include>
+    <include src="./partials/contacts.html"></include>
+  </main>
 
-    <!--slider for customer-reviews------------------------------------------------------------>
+  <include src="./partials/footer.html"></include>
 
-    <!--slider for customer-reviews------------------------------------------------------------>
-  </body>
+  <!-- <include src="./partials/example.html"></include> -->
+  <include src="./partials/example.html"></include>
+  <include src="./partials/footer.html"></include>
+
+
+  <!--slider for customer-reviews------------------------------------------------------------>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script type="text/javascript" src="/slick/slick.min.js"></script>
+  <!--slider for customer-reviews------------------------------------------------------------>
+
+  <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+  <script src="./index.js"></script>
+  <!-- наши скрипты -->
+
+
+</body>
+
 </html>
