--- a/src/index.html
+++ b/src/index.html
@@ -1,54 +1,68 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Icecream</title>
+    <meta
+      name="description"
+      content="Here you can buy the best ice cream in the world"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Icecream</title>
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
 
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
-    rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
+      rel="stylesheet"
+    />
 
-  <!--slider for customer-reviews-------------------------------------->
-  <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
-  <!--slider for customer-reviews-------------------------------------->
-</head>
+    <link rel="icon" type="image/png" href="./images/logo.png" />
 
-<body>
-  <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-  <include src="./partials/hero_header.html"></include>
-  <include src="./partials/mobile-menu.html"></include>
+    <script
+      type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"
+    ></script>
 
-  <main>
-    <include src="./partials/products.html"></include>
-    <include src="./partials/about.html"></include>
-    <include src="./partials/advantages.html"></include>
-    <include src="./partials/gallery.html"></include>
-    <include src="./partials/customer_reviews.html"></include>
-    <include src="./partials/contacts.html"></include>
-  </main>
+    <!--slider for customer-reviews-------------------------------------->
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+    <!--slider for customer-reviews-------------------------------------->
+  </head>
 
-  <include src="./partials/footer.html"></include>
+  <body>
+    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+    <include src="./partials/hero_header.html"></include>
+    <include src="./partials/mobile-menu.html"></include>
 
-  <!-- <include src="./partials/example.html"></include> -->
-  <include src="./partials/example.html"></include>
-  <include src="./partials/footer.html"></include>
+    <main>
+      <include src="./partials/products.html"></include>
+      <include src="./partials/about.html"></include>
+      <include src="./partials/advantages.html"></include>
+      <include src="./partials/gallery.html"></include>
+      <include src="./partials/customer_reviews.html"></include>
+      <include src="./partials/contacts.html"></include>
+    </main>
 
+    <include src="./partials/modal.html"></include>
+    <include src="./partials/footer.html"></include>
 
-  <!--slider for customer-reviews------------------------------------------------------------>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script type="text/javascript" src="/slick/slick.min.js"></script>
-  <!--slider for customer-reviews------------------------------------------------------------>
+    <!-- <include src="./partials/example.html"></include> -->
+    <include src="./partials/example.html"></include>
 
-  <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-  <script src="./index.js"></script>
-  <!-- наши скрипты -->
+    <!--slider for customer-reviews------------------------------------------------------------>
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+    ></script>
+    <script type="text/javascript" src="/slick/slick.min.js"></script>
+    <!--slider for customer-reviews------------------------------------------------------------>
 
-
-</body>
-
+    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <script src="./index.js"></script>
+    <!-- наши скрипты -->
+  </body>
 </html>
