--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Here you can buy the best ice cream in the world"
     />
+    <meta name="keywords" content="ice cream, team" />
 
     <link
       rel="stylesheet"
