--- a/src/index.html
+++ b/src/index.html
@@ -13,17 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./animate.css" />
+    <link rel="stylesheet" href="./slick-1.8.1/slick/slick.css" />
+    <link rel="stylesheet" href="./slick-1.8.1/slick/slick-theme.css" />
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
-    />
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
@@ -39,6 +32,8 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-buy-now.html"></include>
     <include src="./partials/about-modal.html"></include>
+    <include src="./partials/modal-frandhisa.html"></include>
+    <include src="./partials/modal-locate.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
     <script src="./menu-header.js"></script>
@@ -47,7 +42,6 @@
     <script src="./modal-about.js"></script>
     <script src="./main.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./slick.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="./slick-1.8.1/slick/slick.min.js"></script>
   </body>
 </html>
