--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./animate.css" />
-    <link rel="stylesheet" href="./slick-1.8.1/slick/slick.css" />
-    <link rel="stylesheet" href="./slick-1.8.1/slick/slick-theme.css" />
+    <link rel="stylesheet" href="./slick/slick.css" />
+    <link rel="stylesheet" href="./slick/slick-theme.css" />
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
   </head>
   <body>
@@ -40,8 +40,7 @@
     <script src="./menu-buy.js"></script>
     <script src="./modal.js"></script>
     <script src="./modal-about.js"></script>
-    <script src="./main.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./slick-1.8.1/slick/slick.min.js"></script>
+    <script src="./slick/slick.min.js"></script>
   </body>
 </html>
