Спрайт и закоментил Никиту

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Icecream</title>
+    <title>Icecream RiseUp</title>
     <meta
       name="description"
       content="Here you can buy the best ice cream in the world"
@@ -52,14 +52,13 @@
     <include src="./partials/footer.html"></include>
 
     <!-- <include src="./partials/example.html"></include> -->
-    <include src="./partials/example.html"></include>
 
     <!--slider for customer-reviews------------------------------------------------------------>
-    <script
+    <!-- <script
       type="text/javascript"
       src="https://code.jquery.com/jquery-3.6.0.min.js"
     ></script>
-    <script type="text/javascript" src="/slick/slick.min.js"></script>
+    <script type="text/javascript" src="/slick/slick.min.js"></script> -->
     <!--slider for customer-reviews------------------------------------------------------------>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
