--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     <script src="./menu-buy.js"></script>
     <script src="./modal.js"></script>
     <script src="./modal-about.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./slick/slick.min.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
