--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IceCream</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.min.css"
@@ -16,7 +17,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="global">
+  <body class="global" data-spy="scroll" >
   <include src="./partials/header.html"></include>
   <include src="./partials/hero.html"></include>
 
@@ -48,7 +49,8 @@
           });
       });
     </script>
-
+<div id="scrollup"><img alt="Scroll up" src="./images/up.png"></div>
+<script type='text/javascript' src='./js/scrollup.js'></script> 
 <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script> -->
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
