--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
       type="text/css"
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
+    <link rel="stylesheet" href="./slick/slick-theme.css" />
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
   </head>
   <body>
@@ -42,8 +43,7 @@
     <script src="./menu-buy.js"></script>
     <script src="./modal.js"></script>
     <script src="./modal-about.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://code.jquery.com/jquery-migrate-3.3.2.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script
       type="text/javascript"
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
