--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,9 @@
     <!-- ================== -->
   </head>
   <body>
+    
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-
+<header>
       <include src="./partials/page-header.html"></include>
     </header>
     <main>
