--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,10 @@
       type="text/css"
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="./slick/slick-theme.css" />
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
   </head>
