--- a/src/index.html
+++ b/src/index.html
@@ -49,5 +49,6 @@
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <script src="./main.js"></script>
+    <script src="./anime.js"></script>
   </body>
 </html>
