--- a/src/index.html
+++ b/src/index.html
@@ -15,26 +15,25 @@
 </head>
 
 <body>
-  <include src="./partials/header.html"></include>
   <main>
     <include src="./partials/hero.html"></include>
-    <include src="./partials/products.html"></include>
+    <!-- <include src="./partials/products.html"></include>
     <include src="./partials/about.html"></include>
     <include src="./partials/advantages.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/customer-reviews.html"></include>
-    <include src="./partials/contacts.html"></include>
+    <include src="./partials/contacts.html"></include> -->
   </main>
 
-  <include src="./partials/footer.html"></include>
+  <!-- <include src="./partials/footer.html"></include> -->
 
   <!-- Скрипты для слайдер -->
   <!-- Подключает библиотеку jquery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  
+
   <!-- Подключает библиотеку slick -->
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  
+
   <!-- Подключает слайдер -->
   <script src="./js/slider.js"></script>
 
