--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <!-- <include src="./partials/header.html"></include> -->
   <main>
     <include src="./partials/hero.html"></include>
     <!-- <include src="./partials/products.html"></include>
