Подключает библиотеку jquery

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     <include src="./partials/modal-window.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <script src="https://yastatic.net/jquery/3.3.1/jquery.min.js"></script>
     <script src="./index.js"></script>
     <script src="./js/modal-window.js"></script>
     <script src="./js/mobile-menu.js"></script>
