--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,6 @@
       type="text/css"
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
     <link rel="stylesheet" href="./slick/slick-theme.css" />
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
   </head>
@@ -47,6 +43,7 @@
     <script src="./menu-buy.js"></script>
     <script src="./modal.js"></script>
     <script src="./modal-about.js"></script>
+    <script src="./location.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script
       type="text/javascript"
