--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
     />
     <meta name="keywords" content="ice cream, team" />
 
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -23,14 +29,12 @@
 
     <link rel="icon" type="image/png" href="./images/logo.png" />
 
-    <script
-      type="text/javascript"
-      src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"
-    ></script>
-
     <!--slider for customer-reviews-------------------------------------->
-    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
     <!--slider for customer-reviews-------------------------------------->
   </head>
 
@@ -53,15 +57,12 @@
 
     <!-- <include src="./partials/example.html"></include> -->
 
-    <!--slider for customer-reviews------------------------------------------------------------>
-    <!-- <script
-      type="text/javascript"
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-    ></script>
-    <script type="text/javascript" src="/slick/slick.min.js"></script> -->
-    <!--slider for customer-reviews------------------------------------------------------------>
-
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <script
+      type="text/javascript"
+      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
+
     <script src="./index.js"></script>
     <!-- наши скрипты -->
   </body>
