--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,12 @@
     <include src="./partials/modal-locate.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
+    <script src="./modal-buy-now.js"></script>
+    <script src="./modal-about.js"></script>
     <script src="./menu-header.js"></script>
     <script src="./menu-buy.js"></script>
-    <script src="./modal.js"></script>
-    <script src="./modal-about.js"></script>
     <script src="./location.js"></script>
+    <script src="./modal-frandhisa.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script
       type="text/javascript"
