--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,14 @@
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-window.html"></include>
+    <include src="./partials/header-modal.html"></include>
+    
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
     <script src="./js/modal-window.js"></script>
     <script src="./js/mobile-menu.js"></script>
+    <script src="./js/hero-modal.js"></script>
     
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
