--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-buy-now.html"></include>
     <include src="./partials/about-modal.html"></include>
-    <include src="./partials/modal-frandhisa.html"></include>
+    <include src="./partials/modal-franchisa.html"></include>
     <include src="./partials/modal-locate.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
@@ -47,6 +47,7 @@
     <script src="./menu-buy.js"></script>
     <script src="./modal.js"></script>
     <script src="./modal-about.js"></script>
+    <script src="./modal-franchisa.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script
       type="text/javascript"
