--- a/src/index.html
+++ b/src/index.html
@@ -52,5 +52,7 @@
     ></script>
     <script src="./main.js"></script>
     <script src="./anime.js"></script>
+    <script src="./jquery.spincrement.min.js"></script>
+    <script src="./counter.js"></script>
   </body>
 </html>
