adds button styles to the contacts section

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ice Cream - 100% natural ice cream" />
+    <meta
+      name="keywords"
+      content="ice cream, 100% natural ice cream, 100% natural, order ice cream made from natural milk, ice cream made with passion"
+    />
     <title>Ice Cream</title>
     <link
       rel="stylesheet"
