--- a/src/index.html
+++ b/src/index.html
@@ -15,18 +15,18 @@
 </head>
 
 <body>
-  <!-- <include src="./partials/header.html"></include> -->
+  <include src="./partials/header.html"></include>
   <main>
     <include src="./partials/hero.html"></include>
-    <!-- <include src="./partials/products.html"></include>
+    <include src="./partials/products.html"></include>
     <include src="./partials/about.html"></include>
     <include src="./partials/advantages.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/customer-reviews.html"></include>
-    <include src="./partials/contacts.html"></include> -->
+    <include src="./partials/contacts.html"></include>
   </main>
 
-  <!-- <include src="./partials/footer.html"></include> -->
+  <include src="./partials/footer.html"></include>
 
   <!-- Скрипты для слайдер -->
   <!-- Подключает библиотеку jquery -->
