--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
     <script src="./js/modal-window.js"></script>
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/hero-modal.js"></script>
+    <script src="./js/hero-modal2.js"></script>
     
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
