делаю мобильное меню

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <include src="./partials/header.html"></include>
-  <main>
+  <!-- <main>
     <include src="./partials/hero.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/about.html"></include>
@@ -26,7 +26,7 @@
     <include src="./partials/contacts.html"></include>
   </main>
 
-  <include src="./partials/footer.html"></include>
+  <include src="./partials/footer.html"></include> -->
 
   <!-- Скрипты для слайдер -->
   <!-- Подключает библиотеку jquery -->
