--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,10 @@
   </main>
 
   <include src="./partials/footer.html"></include>
+  <include src="./partials/modal.html"></include>
+
+<!-- Модалка -->
+<script src="./js/modal.js"></script>
 
   <!-- Скрипты для слайдер -->
   <!-- Подключает библиотеку jquery -->
@@ -37,6 +41,7 @@
 
   <!-- Подключает слайдер -->
   <script src="./js/slider.js"></script>
+
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
 
