--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <include src="./partials/header.html"></include>
-  <!-- <main>
+  <main>
     <include src="./partials/hero.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/about.html"></include>
@@ -26,8 +26,9 @@
     <include src="./partials/contacts.html"></include>
   </main>
 
-  <include src="./partials/footer.html"></include> -->
-
+  <include src="./partials/footer.html"></include>
+  <!-- MOBILE MENU -->
+  <script src="./js/mobile-menu.js"></script>
   <!-- Скрипты для слайдер -->
   <!-- Подключает библиотеку jquery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
