--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,8 @@
   <!-- Подключает слайдер -->
   <script src="./js/slider.js"></script>
 
-
+  <!-- Плавная прокрутка -->
+  <script src="./js/skroll.js"></script>
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
 
   <script src="./index.js"></script>
