--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <include src="./partials/example.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <title>Заголовок2</title>
     <script src="./index.js"></script>
   </body>
 </html>
