--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <title>Заголовок22</title>
+    <title>Заголовок D</title>
     <script src="./index.js"></script>
   </body>
 </html>
