--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
     <h1>HELLLOOO word</h1>
     <h2>Stas</h2>
     <h3>Artem</h3>
+    <h4>Test</h4>
+    <h5>Test</h5>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
