--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,7 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
-
-    <h2>Stas</h2>
-
+    <p>cute puppy</p>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
