Правки первоначальной настройки

--- a/src/index.html
+++ b/src/index.html
@@ -17,16 +17,20 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/advantages.html"></include>
-    <include src="./partials/problems.html"></include>
-    <include src="./partials/how-we-do.html"></include>
-    <include src="./partials/program.html"></include>
-    <include src="./partials/benefits.html"></include>
-    <include src="./partials/about.html"></include>
-    <include src="./partials/guarantee.html"></include>
-    <include src="./partials/reviews.html"></include>
-    <include src="./partials/contacts.html"></include>
+
+    <main>
+      <include src="./partials/hero.html"></include>
+      <include src="./partials/advantages.html"></include>
+      <include src="./partials/problems.html"></include>
+      <include src="./partials/how-we-do.html"></include>
+      <include src="./partials/program.html"></include>
+      <include src="./partials/benefits.html"></include>
+      <include src="./partials/about.html"></include>
+      <include src="./partials/guarantee.html"></include>
+      <include src="./partials/reviews.html"></include>
+      <include src="./partials/contacts.html"></include>
+    </main>
+    
     <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
