--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,14 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/header.html"></include>
-    <include src="./partials/hero.html"></include>
+
+    <include src="./partials/hero-header.html"></include>
     <include src="./partials/products.html"></include>
-    <include src="./partials/production.html"></include>
-    <include src="./partials/comments.html"></include>
-    <include src="./partials/locations.html"></include>
+    <include src="./partials/about.html"></include>
+    <include src="./partials/advantages.html"></include>
+    <include src="./partials/gallery.html"></include>
+    <include src="./partials/reviews.html"></include>
+    <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
