--- a/classes.html
+++ b/classes.html
@@ -119,7 +119,7 @@
         </div>
       </section>
 
-      <section class="section section--theme-pink section--with-background">
+      <section id="about" class="section section--theme-pink section--with-background">
         <div class="container">
           <h2 class="section__title"></h2>
           <div class="about">
@@ -132,6 +132,8 @@
         </div>
       </section>
 
+      <!-- ======SECTION ADVANTAGES======= -->
+
       <section class="section section--theme-pink">
         <div class="container">
           <h2 class="section__title visually-hidden"></h2>
@@ -152,6 +154,8 @@
           </ul>
         </div>
       </section>
+
+      <!-- ====== SECTION GALLERY ======= -->
 
       <section class="section section--with-gradient">
         <picture>
@@ -163,32 +167,10 @@
       </section>
 
       <!-- ======SECTION CUSTOMER REVIEWS======= -->
-      <section class="section section--theme-pink">
+
+      <section class="section-reviews">
         <div class="container">
-          <h2 class="section__title visually-hidden"></h2>
-
-          <ul class="advantages list">
-            <li class="advantages__item">
-              <p class="advantages__number">::before(.png)</p>
-              <p class="advantages__description"></p>
-            </li>
-            <li class="advantages__item">
-              <p class="advantages__number">::before(.png)</p>
-              <p class="advantages__description"></p>
-            </li>
-            <li class="advantages__item">
-              <p class="advantages__number">::before(.png)</p>
-              <p class="advantages__description"></p>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- ======SECTION CUSTOMER REVIEWS======= -->
-
-      <section class="section">
-        <div class="container">
-          <h2 class="section__title visually-hidden"></h2>
+          <h2 class="section-reviews__title visually-hidden"></h2>
           <ul class="reviews list">
             <li class="reviews__item">
               <picture></picture>
@@ -211,6 +193,52 @@
             <li class="markers__item"></li>
             <li class="markers__item"></li>
             <li class="markers__item"></li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- ======SECTION CONTACTS======= -->
+
+      <section class="section-contacts">
+        <div class="container">
+          <h2 class="contacts__title visually-hidden"></h2>
+
+          <ul class="contacts list">
+            <li class="contacts__item">
+              <p class="contacts__category"></p>
+              <p class="contacts__place"></p>
+              <p class="contacts__description"></p>
+
+              <ul class="schedule">
+                <li class="schedule__item">
+                  <p class="schedule__day">Monday - Friday</p>
+                  <p class="schedule__time"><time>08:00 AM</time> - <time>16:00 PM</time></p>
+                </li>
+                <li class="schedule__item">
+                  <p class="schedule__day">Monday - Friday</p>
+                  <p class="schedule__time"><time>08:00 AM</time> - <time>16:00 PM</time></p>
+                </li>
+              </ul>
+            </li>
+
+            <address class="address">
+              <ul class="list">
+                <li class="address__item">
+                  <a class="address__link" href="tel:+610383766284">+61(0) 383 766 284</a>
+                </li>
+                <li class="address__item">
+                  <a class="address__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+                </li>
+              </ul>
+            </address>
+          </ul>
+          <ul class="buttons-list list">
+            <li class="buttons-list__item">
+              <button type="button" class="button button--secondary"></button>
+            </li>
+            <li class="buttons-list__item">
+              <button type="button" class="button button--primary"></button>
+            </li>
           </ul>
         </div>
       </section>
