--- a/classes.html
+++ b/classes.html
@@ -162,7 +162,7 @@
         </picture>
       </section>
 
-      <!-- ======SECTION CUSTOMER REVIEWS======= -->
+======SECTION CUSTOMER REVIEWS======= -->
       <section class="section section--theme-pink">
         <div class="container">
           <h2 class="section__title visually-hidden"></h2>
