--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <include src="./partials/example.html"></include>
   <include src="./partials/ivan-test-branch.html"></include>
   <include src="./partials/tvard-test-branch.html"></include>
+  <include src="./partials/fil-test.html"></include>
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
   <script src="./index.js"></script>
