--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,9 @@
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
 
+    <!-- Backdrop для location и для Franchise -->
+    <include src="./partials/backdrop.html"></include>
+    
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
