--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
     <include src="./partials/backdrop.html"></include>
     
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
+    <script src="./js/model.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
