Header+styles+mobile-menu
Подправил разметку хедера, добавил стили хедера и моб. меню

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
     <include src="./partials/hero-header.html"></include>
     <include src="./partials/products.html"></include>
-    <!-- <include src="./partials/about.html"></include> -->
+    <include src="./partials/about.html"></include>
     <include src="./partials/advantages.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/reviews.html"></include>
