--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,12 @@
       crossorigin="anonymous"
     />
   </head>
+  <include src="./partials/page-heder.html"></include>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+    <include src="./partials/team.html"></include>
+    <include src="./partials/features.html"></include>
+    <include src="./partials/about.html"></include>
     <include src="./partials/example.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
