--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,11 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
 
-
+    <include src="./partials/header.html"></include>
     <include src="./partials/team.html"></include>
     <include src="./partials/features.html"></include>
     <include src="./partials/about.html"></include>
+    <include src="./partials/footer.html"></include>
     <include src="./partials/example.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
