--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,13 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
+    <include src="./partials/dasha.html"></include>
+    <include src="./partials/dima.html"></include>
+    <include src="./partials/dima.L.html"></include>
+    <include src="./partials/maks.html"></include>
+    <include src="./partials/pavel.html"></include>
+    <include src="./partials/ser.html"></include>
+    <include src="./partials/tolik.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
