--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
   <body>
     
     <include src="./partials/page_header.html"></include>
+    <include src="./partials/page_works.html"></include>
+    
 
     <script src="./index.js"></script>
   </body>
