--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   </head>
   <body>
-    
     <include src="./partials/page_header.html"></include>
-
+    <include src="./partials/our_work.html"></include>
     <script src="./index.js"></script>
   </body>
 </html>
