--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <body>
     
     <include src="./partials/page_header.html"></include>
+    <include src="./partials/subcribe.html"></include>
 
     <script src="./index.js"></script>
   </body>
