--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
-    <include src="./partials/page-header.html"></include>
+    <include src="./partials/page-hero.html"></include>
     <include src="./partials/our-progect.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
