Доделал футер и наши работы
Доделал футер и наши работы

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <include src="./partials/page-features.html"></include>
     <include src="./partials/our-progect.html"></include>
     <include src="./partials/subcribe.html"></include>
+    <include src="./partials/page-footer.html"></include>
     <script src="./index.js"></script>
   </body>
 </html>
