добавил модальное окно
добавил кнопку закрытия

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,13 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
+    <div class="modal">
+      <button type="button" class="modal__btn" data-modal-close>x
+        <svg class="modal__icon" width="11px" height="11px">
+          <use href=""></use>
+        </svg>
+      </button>
+    </div>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
