--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,11 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
-
+  <footer class="footer">
+    <a href="" class="logo">
+      Company
+    </a>
+  </footer>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
