--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     />
   </head>
   <body>
+    <header>Тестовий проект</header>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
