добавлена секция Team

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,15 @@
     />
   </head>
   <body>
+<section>
+  <h2>Наша команда</h2>
+  <ul>
+    <li>Учасник 1</li>
+    <li>Учасник 2</li>
+    <li>Учасник 3</li>
+  </ul>
+</section>
+    
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
