--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <li>Учасник 1</li>
     <li>Учасник 2</li>
     <li>Учасник 3</li>
+     <li>Shemet</li>
   </ul>
 </section>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
