Добавлена секция Особенности

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,14 @@
     <li>Учасник 3</li>
   </ul>
 </section>
+
+<section>
+  <h2>Особенности</h2>
+  <ul>
+    <li>Особенность 1</li>
+    <li>Особенность 2</li>
+  </ul>
+</section>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
   <footer class="footer">
