--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 <section>
   <h2>Наша команда</h2>
   <ul>
-    <li>Учасник 1</li>
+    <li>Учасник1z2x</li>
     <li>Учасник 2</li>
     <li>Учасник 3</li>
      <li>Shemet</li>
