--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
- <header>Тестовий проект</header>
+ <header>Тестовий проект <img src="./src/images/demo.jpg" alt=""> </header>
 <section>
   <h2>Наша команда</h2>
   <ul>
