--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,7 @@
 </section>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
-  <footer class="footer">
-    <a href="" class="logo">
-      Company
-    </a>
-  </footer>
+  
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
     <section>
@@ -40,5 +36,11 @@
         </li>
       </ul>
     </section>
+    <footer class="footer">
+      <a href="" class="logo">
+        Company
+      </a>
+      <include src="./partials/section-soclist.html"></include>
+    </footer>
   </body>
 </html>
