--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,11 @@
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
+
+    <section>
+      <ul class="">
+        Добавдение секции
+      </ul>
+    </section>
   </body>
 </html>
