--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
+
+    <footer>
+      <div class="footer"></div>
+    </footer>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
 
