--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
         
       </div>
     </section>
+    <include src="./partials/feed-back-form.html"></include>
     <include src="./partials/reviews.html"></include>
     <include src ="./partials/contacts__map.html"></include>
     <include src="./partials/footer.html"></include>
