создала блок контакты

--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,7 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
-    <section class="contacts">
-      <div class="container">
-        <div class="contacts__box">
-        </div>
-
-        
-      </div>
-    </section>
+    <include src="./partials/block-contacts.html"></include>
     <include src="./partials/feed-back-form.html"></include>
     <include src="./partials/reviews.html"></include>
     <include src ="./partials/contacts__map.html"></include>
