--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
     />
   </head>
   <body>
+    <header class="page-header">
+      <h1>kaka</h1>
+    </header>
     <h2>dddddddd</h2>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
