--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,14 @@
     />
   </head>
   <body>
-<<<<<<< Updated upstream
     <header class="page-header">
       <h1>kaka</h1>
-=======
-    <header>
-      <h1>add header</h1>
->>>>>>> Stashed changes
     </header>
     <h2>dddddddd</h2>
+
+    <footer>
+      <h2>page-footer</h2>
+    </footer>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
