--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     >
+    <link rel="stylesheet" type="text/css" href="./libs/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="./libs/slick/slick-theme.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
       rel="stylesheet">
@@ -27,5 +29,10 @@
     <include src="./partials/footer.html"></include>
  
     <script src="./index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="./libs/slick/slick.min.js"></script>
+<script src="./libs/main.js"></script>
+
   </body>
 </html>
