--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,15 @@
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
 
+    <script>
+      $(function () {
+        $('.slider').slick({
+          infinite: true,
+          dots: true,
+          arrows: false,
+        });
+      });
+    </script>
     <script src="./index.js"></script>
     <script src="./mobile-menu.js"></script>
   </body>
