--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <include src="./partials/example.html"></include>
     <include src="./partials/section1.html"></include>
     
-идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+<-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
 </html>
