--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
-    <header class="page-header">Это супер-хедер</header>
+    <header class="page-header">Это супер-хедер <a href=""></a></header>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
